Drop the idea of mailing service. Add functionality for: generate physician schedules and edit account. Add dto validations. Refactor most of the code to remove circular dependency and add events.

--- a/medical-clinics/src/main/resources/application.yml
+++ b/medical-clinics/src/main/resources/application.yml
@@ -13,8 +13,7 @@ spring:
 user.account:
     default:
       role: PATIENT
-      status: PENDING
-      messagingBlocked: true
+      status: ACTIVE
 app:
   jwt:
     secret: ${JWT_SECRET}
