--- a/medical-clinics/src/main/resources/application.yml
+++ b/medical-clinics/src/main/resources/application.yml
@@ -1,19 +1,32 @@
+server:
+  servlet:
+    context-path: /api/v1/
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: "jdbc:mysql://localhost:${PORT}/medical_clinics?createDatabaseIfNotExist=true"
     username: ${USERNAME}
     password: ${PASSWORD}
+
   jpa:
     hibernate:
       ddl-auto: update
-    database-platform: org.hibernate.dialect.MySQLDialect
     defer-datasource-initialization: true
+    open-in-view: true
 
 user.account:
-    default:
-      role: PATIENT
-      status: ACTIVE
+  default:
+    role: PATIENT
+    status: ACTIVE
+
 app:
   jwt:
     secret: ${JWT_SECRET}
+
+springdoc:
+  api-docs:
+    path: /api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+  default-produces-media-type: application/json
