--- a/medical-records/src/test/resources/application-test.yml
+++ b/medical-records/src/test/resources/application-test.yml
@@ -1,8 +1,15 @@
+server:
+  port: 8081
+  servlet:
+    context-path: /api/v0/
 spring:
   datasource:
-    url: jdbc:h2:mem:testdb2
+    url: jdbc:h2:mem:testdb;MODE=MYSQL
     driverClassName: org.h2.Driver
     username: test
     password: password
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
+  h2:
+    console:
+      enabled: true
