--- a/medical-clinics-frontend/angular.json
+++ b/medical-clinics-frontend/angular.json
@@ -5,7 +5,9 @@
   "projects": {
     "medical-clinics-frontend": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
