--- a/medical-clinics/src/main/resources/application.yml
+++ b/medical-clinics/src/main/resources/application.yml
@@ -38,5 +38,5 @@ springdoc:
   api-docs:
     path: /api-docs
   swagger-ui:
-    path: /swagger-ui.html
+    path: /swagger-ui
   default-produces-media-type: application/json
